# SimpleUI

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
outline/: outline.txt
src/: CMakeLists.txt  imgui.ini  main.cpp
src/Graphics/: SimUIWindow.cpp  SimUIWindow.hpp  Window.cpp  Window.hpp
src/SimpleUIEngine/: AppCreator.cpp  AppCreator.hpp  Editor.cpp  Editor.hpp  SimUIEngine.cpp  SimUIEngine.hpp  SimUI_App.cpp  SimUI_App.hpp  SimUI_Editor.cpp  SimUI_Editor.hpp  SimUI_Engine.cpp  SimUI_Engine.hpp  SimUI_IO.cpp  SimUI_IO.hpp  SimpleUIEngine.cpp  SimpleUIEngine.hpp  imgui.ini
